Thu Jun 02 13:21:28 GMT 2011  Olly Betts <olly@survex.com>

	* AUTHORS: Add recent bug reporters.

Thu Jun 02 11:03:57 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: If default_op is OP_NEAR or
	  OP_PHRASE then disable stemming of the terms, since we don't index
	  positional information for stemmed terms by default.
	* tests/queryparsertest.cc: Adjust near1 and phrase1 to act as
	  regression tests for this fix.

Thu Jun 02 02:58:58 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_spelling.cc,backends/brass/brass_spelling.h,
	  backends/chert/chert_spelling.cc,backends/chert/chert_spelling.h,
	  backends/flint/flint_spelling.cc,backends/flint/flint_spelling.h:
	  Fix bug Nikita Smetanin spotted with adding a word which has the
	  same trigram in an even number of times.
	* tests/api_spelling.cc: Add regression test spell8.

Wed Jun 01 14:11:38 GMT 2011  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Kill the child process which holds the lock
	  with SIGKILL as that can't be ignored, whereas SIGHUP can be in some
	  cases it seems.

Wed Jun 01 12:12:14 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstartexpand.cc.html,docs/quickstartindex.cc.html,
	  docs/quickstartsearch.cc.html: Reinstate the old HTML versions
	  of these files.

Wed Jun 01 12:09:55 GMT 2011  Olly Betts <olly@survex.com>

	* docs/queryparser.rst,docs/remote_protocol.rst: Fix literal hard
	  spaces in input to just be spaces.

Wed Jun 01 12:06:26 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix sub-heading run in to previous paragraph.

Wed Jun 01 12:04:52 GMT 2011  Olly Betts <olly@survex.com>

	* docs/remote.rst: Replace out-dated list of xapian-tcpsrv's command
	  line options with a reference to --help and the man page.  Tweak
	  wording in a few places.

Wed Jun 01 11:54:37 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Change omrset to rset.  Remove some bogus `` left